fix: align lines connecting source tree nodes (#2826)

--- a/app/common/renderer/components/SessionInspector/SourceTab/Source.module.css
+++ b/app/common/renderer/components/SessionInspector/SourceTab/Source.module.css
@@ -60,7 +60,6 @@
   flex: 1;
   overflow: auto;
   --ant-tree-title-height: 18px !important;
-  --ant-tree-indent-size: 18px !important;
 }
 
 .sourceTree :global(.ant-tree-treenode) {
